# pyclaudir

./: api-agent-guide.md  pyproject.toml  retrieval-agent-guide.md
docs/: README.md  changelog.md  mindmap.md  slack-setup.md  slack-wiki-agent.md  wiki-agent-plan.md  wiki-agent-testing-plan.md
docs/access-control/: overview.md
docs/cc-worker/: overview.md
docs/config/: overview.md
docs/database/: overview.md
docs/engine/: overview.md
docs/security/: overview.md
docs/skills/: overview.md
docs/storage/: overview.md
docs/telegram-io/: overview.md
docs/tools/: overview.md
prompts/: system.md
pyclaudir/: __main__.py  config.py  mcp_server.py  models.py
pyclaudir/db/: messages.py  reminders.py
pyclaudir/db/migrations/: 006_slack_message_ids.sql  007_kb_ingestions.sql
pyclaudir/slack_io/: __init__.py  attachments.py  commands.py  dispatcher.py  formatter.py  intro.py
pyclaudir/telegram_io/: dispatcher.py
pyclaudir/tools/: base.py  kb_search.py  kb_upload.py
pyclaudir/tools/slack/: __init__.py  add_reaction.py  create_poll.py  delete_message.py  edit_message.py  reply_to_message.py  send_message.py  send_photo.py  stop_poll.py
skills/wiki-nightly/: SKILL.md
skills/wiki-qa/: SKILL.md
